# pixels

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  guide.md  gunicorn_conf.py  pyproject.toml  start.sh  tox.ini
.github/: build.yaml
.github/workflows/: build.yaml  lint.yaml  status_embed.yaml
april/: __init__.py  april.py  canvas.py  constants.py
april/templates/: api_token.html
april/utils/: generate_test_data.py  ratelimits.py
pixels/: README.md  __init__.py  canvas.py  constants.py  models.py  pixels.py
pixels/docs/: getting_started.md  overview.md  rate_limits.md
pixels/endpoints/: authorization.py  general.py  insecure.py  moderation.py
pixels/resources/: mods.txt
pixels/static/: base.css
pixels/static/favicons/: README.md  html_code.html
pixels/templates/: api_token.html  base.html  cookie_disabled.html  docs.html  not_found.html
pixels/utils/: README.md  auth.py  database.py  docs.py  ratelimits.md  ratelimits.py
postgres/: bulk_history_insert.sql  init.sql
scripts/: generate_timelapse.py  test_endpoints.py
