[[source]]
url = "https://pypi.python.org/simple"
verify_ssl = true
name = "pypi"

[tool.poetry]
name = "pixels"
version = "2.0.0"
description = "A collaborative canvas, where users paint pixel by pixel, by POSTing coordinates and a colour code to an API."
authors = ["Python Discord <info@pythondiscord.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.*"
asyncpg = "^0.23.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
gunicorn = "^20.1.0"
fastapi = "^0.65.2"
python-decouple = "^3.4"
httpx = "^0.18.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
jinja2 = "^3.0.1"
aioredis = "^1.3.1"
aiofiles = "^0.7.0"
pillow = "^9.0.0"
tomlkit = "^0.7.2"
SQLAlchemy = "^1.4.19"
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
flake8 = "^3.9.2"
flake8-annotations = "^2.6.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6"
flake8-import-order = "^0.18.1"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.3"
flake8-todo = "^0.7"
pep8-naming = "^0.11.1"
pre-commit = "^2.13.0"
requests = "^2.25.1"
click = "^8.0.1"
taskipy = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "uvicorn pixels.pixels:app"
reload = "uvicorn pixels.pixels:app --reload"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
